--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif;
+}
+
+.wrapper {
+  width: min(1440px, 100%);
+  margin: auto;
+  height: 100%;
+}
+
+router-outlet {
+  display: none;
+}
+
+.btn {
+  padding: 5px 10px;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 5px;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn-green {
+  background-color: green;
+  color: white;
+}
+.btn-yellow {
+  background-color: gold;
+  color: black;
+}
+.btn-red {
+  background-color: red;
+  color: white;
+  cursor: not-allowed;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 100vw;
+}
